--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "svelte-modals": "^1.3.0"
   }
 }
